--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,14 +1,34 @@
 @import 'reset';
 
+.common-title{
+  color:#009ee0;
+  font-size:80px;
+  line-height:0.8;
+  font-weight:bold;
+  letter-spacing:-5px;
+}
+.common-text{
+  color:white;
+  line-height:1.5;
+  font-size:15px;
+}
+
+.clearfix{
+  zoom: 1;
+  &::after{
+    display: block;
+    content: '';
+    clear: both;
+  }
+}
+
+
 #wrap{
-  height:100%;
   position: relative;
-  //头部
+  height: 100%;
   #header{
     position: relative;
-    //头部版心
     .header-main{
-      background-color: green;
       width: 1100px;
       height: 80px;
       margin: 0 auto;
@@ -17,7 +37,7 @@
         float: left;
         margin-top: 15px;
       }
-      //头部导航区域
+      //导航区域
       .nav{
         float: right;
         margin-top: 50px;
@@ -28,12 +48,12 @@
           color: #009EE0;
           &:hover{
             .down{
-              width:100%;
+              width: 100%;
             }
           }
           &.active{
             .down{
-              width:100%;
+              width: 100%;
             }
           }
           .down{
@@ -50,48 +70,418 @@
       //小箭头区域
       .arrow{
         position: absolute;
-        left:50%;
-        z-index: 5;
+        left: 50%;
         bottom: -11px;
+        z-index: 5;
         width: 21px;
         height: 11px;
         background-image: url('../images/arrow.png');
         background-repeat: no-repeat;
-        transition:left 1s;
+        transition: left 1s;
       }
     }
   }
-  //内容区
   #content{
     position: absolute;
     top: 80px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    background-color: yellowgreen;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: hidden;
     >ul{
       position: absolute;
-      top:0;
-      transition:top 1s;
-      width:100%;
-      height:500%;
+      //解决第一次没有过渡效果问题
+      top: 0;
+      width: 100%;
+      height: 500%;
+      transition: top 1s;
+      will-change: top;
       >li{
-        width:100%;
-        height:20%;
         position: relative;
+        width: 100%;
+        height: 20%;
+        background-repeat: no-repeat;
+        &:nth-child(1){
+          background-image: url('../images/bg1.jpg');
+        }
+        &:nth-child(2){
+          background-image: url('../images/bg2.jpg');
+        }
+        &:nth-child(3){
+          background-image: url('../images/bg3.jpg');
+        }
+        &:nth-child(4){
+          background-image: url('../images/bg4.jpg');
+        }
+        &:nth-child(5){
+          background-image: url('../images/bg5.jpg');
+        }
+        /*display: flex;
+        justify-content: center;
+        align-items: center;*/
         >section{
+          /*position: absolute;
+          top: 50%;
+          left: 50%;
+          margin: -260px 0 0 -550px;*/
+          /*position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          top: 0;
+          margin: auto;*/
           position: absolute;
-          left:0;
-          top:0;
-          bottom:0;
-          right:0;
-          margin:auto;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
           width: 1100px;
           height: 520px;
-          background-color: yellow;
+          &.home{
+            .home-carousel{
+              position: relative;
+              width: 100%;
+              height: 100%;
+              transform-style: preserve-3d;
+              perspective: 1000px;
+              li{
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                line-height: 520px;
+                color: #fff;
+                visibility: hidden;
+                &.show{
+                  visibility: visible;
+                }
+                &.leftHide{
+                  visibility: hidden;
+                  animation: leftHide 2s linear;
+                }
+                &.rightShow{
+                  visibility: visible;
+                  animation: rightShow 2s linear;
+                }
+                &.leftShow{
+                  visibility: visible;
+                  animation: leftShow 2s linear;
+                }
+                &.rightHide{
+                  visibility: hidden;
+                  animation: rightHide 2s linear;
+                }
+                &:nth-child(1){
+                  background:#dc6c5f;
+                }
+                &:nth-child(2){
+                  background:#95dc84;
+                }
+                &:nth-child(3){
+                  background:#64b9d2;
+                }
+                &:nth-child(4){
+                  background:#000000;
+                }
+              }
+            }
+            .home-points{
+              position: absolute;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              li{
+                float: left;
+                width: 20px;
+                height: 20px;
+                background-color: rgba(255,255,255,0.5);
+                margin: 2px;
+                box-shadow: 0 0 4px rgba(25,25,25,0.8);
+                border-radius: 50%;
+                &.active{
+                  background-color: rgba(255,255,255,1);
+                }
+              }
+            }
+          }
+          /*第二屏*/
+          &.course{
+            .course-title{
+              margin: 50px;
+            }
+            .common-text{
+              width: 400px;
+              margin-left: 50px;
+            }
+            .course-photo{
+              position: absolute;
+              right: 50px;
+              top: 70px;
+              width: 480px;
+              li{
+                position: relative;
+                float: left;
+                width: 120px;
+                height: 132px;
+                &:hover{
+                  .back{
+                    transform: rotateY(360deg);
+                  }
+                  .front{
+                    transform: rotateY(180deg);
+                  }
+                }
+                .front{
+                  width: 100%;
+                  height: 100%;
+                  transition: transform 2s;
+                  background-image: url('../images/pcwelt.png');
+                  background-repeat: no-repeat;
+                  background-position: center;
+                  backface-visibility: hidden;
+                }
+                .back{
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  width: 100%;
+                  height: 100%;
+                  box-sizing: border-box;
+                  transform: rotateY(180deg);
+                  transition: transform 2s;
+                  backface-visibility: hidden;
+                  background-color: #009ee0;
+                  padding: 15px;
+                }
+              }
+            }
+            .course-line{
+              position: absolute;
+              top: 65px;
+              z-index: 10;
+              width: 9px;
+              height: 410px;
+              background-image: url('../images/plus_row.png');
+              background-repeat: no-repeat;
+              &:nth-of-type(1){
+                right: 525px;
+              }
+              &:nth-of-type(2){
+                right: 405px;
+              }
+              &:nth-of-type(3){
+                right: 285px;
+              }
+              &:nth-of-type(4){
+                right: 165px;
+              }
+              &:nth-of-type(5){
+                right: 45px;
+              }
+            }
+          }
+          /*第三屏*/
+          &.works{
+            /*第三屏标题*/
+            .works-title{
+              margin: 50px 0 100px 50px;
+            }
+            /*第三屏列表*/
+            .works-list{
+              margin-left: 50px;
+              li{
+                width: 220px;
+                height: 133px;
+                margin: 0 1px;
+                float: left;
+                position: relative;
+                overflow: hidden;
+                &:last-child{
+                  width: 332px;
+                }
+                &:hover{
+                  .works-mask{
+                    opacity:1;
+                    div{
+                      background-position: 0 -35px;
+                    }
+                  }
+                  img{
+                    transform: rotate(30deg) scale(1.5);
+                  }
+                }
+                img{
+                  transition:transform 1s;
+                }
+                .works-mask{
+                  width:100%;
+                  height:100%;
+                  background-color: rgba(25,25,25,0.8);
+                  position: absolute;
+                  left:0;
+                  top:0;
+                  color: #fff;
+                  padding: 10px;
+                  box-sizing: border-box;
+                  opacity:0;
+                  transition: opacity 1s;
+                  div{
+                    width: 32px;
+                    height: 34px;
+                    background-image: url("../images/zoomico.png");
+                    position: absolute;
+                    left:0;
+                    top:0;
+                    right:0;
+                    bottom:0;
+                    margin:auto;
+                    transition: background-position 1s;
+                  }
+                }
+              }
+            }
+            /*第三屏机器人*/
+            .works-robot{
+              width: 167px;
+              height: 191px;
+              position: absolute;
+              left: 900px;
+              top: 170px;
+              background-image: url("../images/robot.png");
+              animation:robotMove 5s linear infinite;
+            }
+          }
+          /*第四屏*/
+          &.about{
+            /*第四屏标题*/
+            .about-title{
+              margin: 50px 0 100px 50px;
+            }
+            /*第四屏文本*/
+            .about-text{
+              color: #fff;
+              width: 400px;
+              margin-left: 50px;
+            }
+            /*第四屏图片框*/
+            >div{
+              width: 260px;
+              height: 200px;
+              border: 5px rgba(255,255,255,0.5) solid;
+              border-radius: 8px;
+              position: absolute;
+              z-index: 1;
+              &.about-up{
+                background-image: url("../images/about1.jpg");
+                left: 750px;
+                top: 50px;
+                ul{
+                  li{
+                    background-image: url("../images/about3.jpg");
+                  }
+                }
+              }
+              &.about-down{
+                background-image: url("../images/about2.jpg");
+                left: 600px;
+                top: 290px;
+                ul{
+                  li{
+                    background-image: url("../images/about4.jpg");
+                  }
+                }
+              }
+              >ul{
+                width:100%;
+                height:100%;
+                &:hover{
+                  li{
+                    &:nth-child(1){
+                      background-position: 0 100px;
+                    }
+                    &:nth-child(2){
+                      background-position: -260px 0px;
+                    }
+                    &:nth-child(3){
+                      background-position: 130px -100px;
+                    }
+                    &:nth-child(4){
+                      background-position: -130px -200px;
+                    }
+                  }
+                }
+                li{
+                  float: left;
+                  width:50%;
+                  height:50%;
+                  background-repeat: no-repeat;
+                  transition:background-position 1s;
+                  &:nth-of-type(1){
+                    background-position: 0 0;
+                  }
+                  &:nth-of-type(2){
+                    background-position: -130px 0;
+                  }
+                  &:nth-of-type(3){
+                    background-position: 0 -100px;
+                  }
+                  &:nth-of-type(4){
+                    background-position: -130px -100px;
+                  }
+                }
+              }
+            }
+            /*第四屏线*/
+            .about-line{
+              width: 357px;
+              height: 998px;
+              position:absolute;
+              right: 188px;
+              top: -13px;
+              background-image: url("../images/greenLine.png");
+              background-repeat: no-repeat;
+            }
+          }
+          /*第五屏*/
         }
       }
     }
   }
+}
+
+
+//第一屏动画
+//点右边
+@keyframes rightShow {
+  0%{visibility: hidden; transform:translateZ(-200px)}
+  50%{transform:translateX(40%) rotateY(-30deg) scale(.8)}
+  100%{visibility: visible; transform:translateZ(0px)}
+}
+
+@keyframes leftHide {
+  0%{visibility: visible; transform:translateZ(0px)}
+  50%{transform:translateX(-40%) rotateY(30deg) scale(.8)}
+  100%{visibility: hidden; transform:translateZ(-200px)}
+}
+
+//点左边
+@keyframes rightHide {
+  0%{visibility: visible; transform:translateZ(0px)}
+  50%{transform:translateX(40%) rotateY(-30deg) scale(.8)}
+  100%{visibility: hidden; transform:translateZ(-200px)}
+}
+
+@keyframes leftShow {
+  0%{visibility: hidden; transform:translateZ(-200px)}
+  50%{transform:translateX(-40%) rotateY(30deg) scale(.8)}
+  100%{visibility: visible; transform:translateZ(0px)}
+}
+
+//第三屏机器人动画
+@keyframes robotMove {
+  0%{}
+  49%{transform:translateX(-400px)}
+  50%{transform:translateX(-400px) rotateY(180deg)}
+  100%{transform:rotateY(180deg)}
 }
