--- a/src/less/index.less
+++ b/src/less/index.less
@@ -37,6 +37,15 @@
         float: left;
         margin-top: 15px;
       }
+      .music{
+        float: left;
+        background-image: url("../images/musicoff.gif");
+        background-repeat: no-repeat;
+        width:14px;
+        height:14px;
+        margin:50px 0 0 5px;
+        cursor: pointer;
+      }
       //导航区域
       .nav{
         float: right;
@@ -88,7 +97,7 @@
     left: 0;
     right: 0;
     overflow: hidden;
-    >ul{
+    .content-main{
       position: absolute;
       //解决第一次没有过渡效果问题
       top: 0;
@@ -101,6 +110,7 @@
         width: 100%;
         height: 20%;
         background-repeat: no-repeat;
+        overflow: hidden;
         &:nth-child(1){
           background-image: url('../images/bg1.jpg');
         }
@@ -143,6 +153,7 @@
               height: 100%;
               transform-style: preserve-3d;
               perspective: 1000px;
+              transition:transform 1s,opacity 1s;
               li{
                 position: absolute;
                 left: 0;
@@ -280,6 +291,36 @@
                 right: 45px;
               }
             }
+            .course-plane1{
+              width:359px;
+              height:283px;
+              background:url("../images/plane1.png") no-repeat;
+              position:absolute;
+              left:300px;
+              top:-100px;
+              transition:1s;
+              z-index: -1;
+            }
+            .course-plane2{
+              width:309px;
+              height:249px;
+              background:url("../images/plane2.png") no-repeat;
+              position:absolute;
+              left:-100px;
+              top:200px;
+              transition:1s;
+              z-index: -1;
+            }
+            .course-plane3{
+              width:230px;
+              height:182px;
+              background:url("../images/plane3.png") no-repeat;
+              position:absolute;
+              left:300px;
+              top:400px;
+              transition:1s;
+              z-index: -1;
+            }
           }
           /*第三屏*/
           &.works{
@@ -351,6 +392,37 @@
               background-image: url("../images/robot.png");
               animation:robotMove 5s linear infinite;
             }
+            /*铅笔*/
+            .works-pencil1{
+              width:180px;
+              height:97px;
+              background:url("../images/pencel1.png") no-repeat;
+              position:absolute;
+              transition:1s;
+              left:500px;
+              top:0;
+              z-index: -1;
+            }
+            .works-pencil2{
+              width:268px;
+              height:38px;
+              background:url("../images/pencel2.png") no-repeat;
+              position:absolute;
+              transition:1s;
+              left:300px;
+              top:250px;
+              z-index: -1;
+            }
+            .works-pencil3{
+              width:441px;
+              height:231px;
+              background:url("../images/pencel3.png") no-repeat;
+              position:absolute;
+              transition:1s;
+              left:650px;
+              top:300px;
+              z-index: -1;
+            }
           }
           /*第四屏*/
           &.about{
@@ -372,6 +444,7 @@
               border-radius: 8px;
               position: absolute;
               z-index: 1;
+              transition:transform 1s;
               &.about-up{
                 background-image: url("../images/about1.jpg");
                 left: 750px;
@@ -449,6 +522,7 @@
             .team-title{
               margin: 50px;
               float: left;
+              transition:transform 1s;
             }
             /*第五屏文本*/
             .team-text{
@@ -456,6 +530,7 @@
               margin: 50px;
               float: right;
               color: #fff;
+              transition:transform 1s;
             }
             /*第五屏图片*/
             .team-list{
@@ -486,6 +561,22 @@
               }
             }
           }
+        }
+      }
+    }
+    .content-nav{
+      position: absolute;
+      right: 10px;
+      top:50%;
+      transform:translateY(-50%);
+      li{
+        width: 15px;
+        height: 15px;
+        border: 1px solid #fff;
+        margin-top: 10px;
+        border-radius: 50%;
+        &.active{
+          background-color: #fff;
         }
       }
     }
